fixed layout issue

--- a/style.css
+++ b/style.css
@@ -308,3 +308,14 @@ hr {
   top: 30%;
   left: 50%;
 }
+
+#cardsContainer {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.card {
+  margin-right: 1rem !important;
+}
